fixed some layout bugs for mobile display

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
             <img src="public/images/background.png" class="main-content__background-image"/>
             <img class="band-banner" id="band-banner" src="public/images/banner-sd.png">
             
-            <div id="listen-content" class="listen-content"></div>
+            <div id="listen-content" class="listen-content">
+                <p><i class="fab fa-spotify"></i></p>
+                <p><i class="fab fa-itunes"></i></p>
+                <p><i class="fab fa-amazon"></i></p>
+                <p> <i class="fab fa-deezer"></i></p>
+                <p> <i class="fab fa-youtube"></i></p>
+                <p> <i class="fab fa-soundcloud"></i></p>
+            </div>
             <div id="concert-content" class="concert-content"></div>
             <div id="band-content" class="band-content"></div>
             <div id="pictures-content" class="pictures-content">
