new gallery layout

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <div id="concert-content" class="concert-content"></div>
             <div id="band-content" class="band-content"></div>
             <div id="pictures-content" class="pictures-content">
-                <img src="public/images/logo-sd.png"/>
-                <img src="public/images/logo-sd.png"/>
-                <img src="public/images/logo-sd.png"/>
-                <img src="public/images/logo-sd.png"/>
+                <img src="public/images/groupe1.png"/>
+                <img src="public/images/groupe2.png"/>
+                <img src="public/images/groupe3.png"/>
+                <img src="public/images/groupe4.png"/>
             </div>
                 
             <div id="page-content" class="page-content">  
