added overflow hidden on main content

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <p> <i class="fab fa-youtube"></i></p>
                 <p> <i class="fab fa-soundcloud"></i></p>
             </div>
-            <div id="concert-content" class="page-content"></div>
-            <div id="band-content" class="page-content">
+            <div id="concert-content" class="page-content page-content--concert"></div>
+            <div id="band-content" class="page-content page-content--band">
                 <p>
                     Certains disaient que le rock était mort. Mais pas Clément Benezech, Arnaud Bressolles, Julien Gomiz et Frédéric Vallée Gimenez, les quatre membres de Sweet Divergence, tombés dans la marmite de rock quand ils étaient petits.
                 </p><p>
