multiple mobile layout fixed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
                 <p> <i class="fab fa-youtube"></i></p>
                 <p> <i class="fab fa-soundcloud"></i></p>
             </div>
-            <div id="concert-content" class="page-content page-content--concert"></div>
+            <div id="concert-content" class="page-content page-content--concert">
+                <p>Concert 1</p>
+                <p>Concert 2</p>
+                <p>Concert 3</p>
+                <p>Concert 4</p>
+            </div>
             <div id="band-content" class="page-content page-content--band">
                 <p>
                     Certains disaient que le rock était mort. Mais pas Clément Benezech, Arnaud Bressolles, Julien Gomiz et Frédéric Vallée Gimenez, les quatre membres de Sweet Divergence, tombés dans la marmite de rock quand ils étaient petits.
