improvements to layout

--- a/index.html
+++ b/index.html
@@ -39,10 +39,30 @@
                 <p> <i class="fab fa-soundcloud"></i></p>
             </div>
             <div id="concert-content" class="page-content page-content--concert">
-                <p>Concert 1</p>
-                <p>Concert 2</p>
-                <p>Concert 3</p>
-                <p>Concert 4</p>
+                <div id = "concert-container--1" class="concert-container">
+                    <p class = "concert-name">La cave à rock</p>
+                    <img src='./public/images/groupe4.png'>
+                    <p class ='concert-description'>Je ne voudrais pas rentrer dans des choses trop dimensionnelles, mais, tu vois au passage qu'il n'y a rien de concret car le cycle du cosmos dans la vie... c'est une grande roue parce que spirituellement, on est tous ensemble, ok ? C'est cette année que j'ai eu la révélation ! </p>
+                </div>
+
+                <div id = "concert-container--2" class="concert-container">
+                    <p class = "concert-name">La cave à rock</p>
+                    <img src='./public/images/groupe4.png'>
+                    <p class ='concert-description'>Je ne voudrais pas rentrer dans des choses trop dimensionnelles, mais, tu vois au passage qu'il n'y a rien de concret car le cycle du cosmos dans la vie... c'est une grande roue parce que spirituellement, on est tous ensemble, ok ? C'est cette année que j'ai eu la révélation ! </p>
+                </div>
+
+                <div id = "concert-container--3" class="concert-container">
+                    <p class = "concert-name">La cave à rock</p>
+                    <img src='./public/images/groupe4.png'>
+                    <p class ='concert-description'>Je ne voudrais pas rentrer dans des choses trop dimensionnelles, mais, tu vois au passage qu'il n'y a rien de concret car le cycle du cosmos dans la vie... c'est une grande roue parce que spirituellement, on est tous ensemble, ok ? C'est cette année que j'ai eu la révélation ! </p>
+                </div>
+
+                <div id = "concert-container--4" class="concert-container">
+                    <p class = "concert-name">La cave à rock</p>
+                    <img src='./public/images/groupe4.png'>
+                    <p class ='concert-description'>Je ne voudrais pas rentrer dans des choses trop dimensionnelles, mais, tu vois au passage qu'il n'y a rien de concret car le cycle du cosmos dans la vie... c'est une grande roue parce que spirituellement, on est tous ensemble, ok ? C'est cette année que j'ai eu la révélation ! </p>
+                </div>
+
             </div>
             <div id="band-content" class="page-content page-content--band">
                 <p>
@@ -91,7 +111,7 @@
             <nav id='nav-bar' class="nav-bar nav-bar--initial">
                 
                 <div id="nav-bar__item-1" class="nav-bar__item"><i class="fas fa-headphones"></i>Ecouter</div>
-                <div id="nav-bar__item-2" class="nav-bar__item"><i class="fas fa-drum"></i>Concerts</div>
+                <div id="nav-bar__item-2" class="nav-bar__item"><i class="fas fa-hand-middle-finger"></i>Concerts</div>
                 <div id="nav-bar__item-3" class="nav-bar__item"><i class="fas fa-users"></i>Le groupe</div>
                 <div id="nav-bar__item-4" class="nav-bar__item"><i class="fas fa-camera-retro"></i>Gallerie</div>
                 <div id="nav-bar__item-hide" class="nav-bar__item"><i class="fas fa-chevron-up"></i></div>
