fixed some issues with navigation. improved desktop main nav bar looks

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <img src="public/images/groupe12.png"/>
             </div>
                 
-            <div id="page-content" class="page-content page-content--home enter-left">  
+            <div id="home-content" class="page-content page-content--home enter-left">  
                 
                 <span><h2>Rock Made in Toulouse</h2></span>
                 <span><h3>First EP "Don't Buy This Shit"</h3></span>
