--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <body>
         <div class="spin-loader__background">
             <div class="spin-loader__content">
-                <img src="public/images/logo-sd.png" id="" class=""/>
-                
+                <div class ="spin-loader__disc"></div>
+                <img src="public/images/logo-sd.png" id="" class=""/>              
             </div>
-            <p class = "spin-loader__text">... pretending to load stuff ...</p>
+            <p class = "spin-loader__text">... pretending to load stuff</p>
             
         </div>
         <main id="main-content" class = "main-content">
