changed gallery layout for desktop

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class ="spin-loader__disc"></div>
                 <img src="public/images/logo-sd.png" id="" class=""/>              
             </div>
-            <p class = "spin-loader__text">... pretending to load stuff</p>
+            <p class = "spin-loader__text">... pretending to load stuff ...</p>
             
         </div>
         <main id="main-content" class = "main-content">
