--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
                 
                 <span><h2>Rock Made in Toulouse</h2></span>
                 <span><h3>First EP "Don't Buy This Shit"</h3></span>
+                
+                <div id = "buy-link" class="buy-link">
+                    <p>Acheter sur Bandcamp</p>
+                    <i class="fas fa-chevron-right"></i>
+                    <a href ="https://sweetdivergence.bandcamp.com/releases"><i class="fab fa-bandcamp"></i></a>
+                    <i class="fas fa-chevron-left"></i>
+                </div>
                 <a href='https://open.spotify.com/album/7h1jwNDLt8KqFx2VdiiNUh'><i class="fab fa-spotify"></i></a>
                 <a href='https://music.apple.com/us/album/dont-buy-this-shit-ep/1542219665'><i class="fab fa-itunes"></i></a>
                 <a href='https://music.amazon.fr/albums/B08P76CB1G'><i class="fab fa-amazon"></i></a>
